--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "3dti_AudioToolkit"]
 	path = 3dti_AudioToolkit
 	url = https://github.com/3DTune-In/3dti_AudioToolkit
+  branch = M20210507
